[tool.poetry]
name = "am"
version = "0.1.0"
description = ""
authors = ["Rodrigo Belli <bellirodrigo2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
treelib = "^1.7.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
flake8 = "^7.1.0"
ruff = "^0.4.10"
black = "^24.4.2"
isort = "^5.13.2"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.4.26"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
